# core-server

./: README.md  client.hs  core-server.cabal
src/: Main.hs
