name:                core-server
version:             0.1.0.0
synopsis:            A server that eats Haskell code and answers with the generated Core
description:         A server that eats Haskell code and answers with the generated Core
homepage:            http://github.com/alpmestan/core-server
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alpmestan@gmail.com>
maintainer:          alpmestan@gmail.com
copyright:           2013 Alp Mestanogullari
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable core-server
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4,
                       aeson,
                       bytestring,
                       text,
                       time,
                       network,
                       async,
                       core-simple,
                       optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010